fix: fix email code snippets line numbers overflow

--- a/src/components/shared/code-group/code-group.module.scss
+++ b/src/components/shared/code-group/code-group.module.scss
@@ -46,7 +46,5 @@
 }
 
 .items-container {
-  > div {
-    display: none;
-  }
+  display: block;
 }
